--- a/Quaranteen Project/Base.lproj/Main.storyboard
+++ b/Quaranteen Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7v3-5M-HOB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8xc-rI-dZh">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -13,11 +13,11 @@
             <objects>
                 <viewController title="Home View Controller" id="v1x-xZ-Zez" customClass="ViewController" customModule="Quaranteen_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="d4D-EB-5VA">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t0M-4C-hUn" userLabel="challengeCard">
-                                <rect key="frame" x="52" y="382" width="310" height="372"/>
+                                <rect key="frame" x="52" y="362" width="310" height="333"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Challenge" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2e-N0-qSF" userLabel="cardTitle">
                                         <rect key="frame" x="19" y="53" width="188" height="48"/>
@@ -81,11 +81,11 @@
                                 <color key="backgroundColor" red="0.95425027610000002" green="0.59998601679999997" blue="0.2438066602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVM-1k-8Iw">
-                                <rect key="frame" x="0.0" y="800" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="741" width="414" height="49"/>
                                 <items>
                                     <barButtonItem image="homeIcon" style="plain" id="gqi-fF-BrV" userLabel="homeButton">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="agj-FU-OXy">
-                                            <rect key="frame" x="20" y="4.5" width="140" height="35"/>
+                                            <rect key="frame" x="20" y="7" width="140" height="35"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" title="Button" image="homeIcon"/>
                                         </button>
@@ -94,7 +94,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="eBu-Zh-7oB"/>
                                     <barButtonItem style="plain" id="1Dn-22-qcY" userLabel="progressButton">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="btK-aU-r4G">
-                                            <rect key="frame" x="160" y="5" width="116" height="34"/>
+                                            <rect key="frame" x="160" y="7.5" width="116" height="34"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" image="progressIcon"/>
                                         </button>
@@ -102,7 +102,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="CPF-yM-0bo"/>
                                     <barButtonItem style="plain" id="aU3-8k-Qnv" userLabel="profileButton">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="9Z7-Uq-4KG">
-                                            <rect key="frame" x="324" y="8" width="70" height="28"/>
+                                            <rect key="frame" x="324" y="10.5" width="70" height="28"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <state key="normal" image="profileIcon"/>
@@ -111,7 +111,7 @@
                                 </items>
                             </toolbar>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQb-iE-zKa">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="12" width="414" height="56"/>
                                 <items>
                                     <navigationItem title="Home" id="Bsn-ae-lo0">
                                         <barButtonItem key="leftBarButtonItem" image="Arrow 1" id="Lli-El-tm8">
@@ -124,7 +124,7 @@
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4 DAY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5As-zF-Xxw">
-                                <rect key="frame" x="142" y="139" width="130" height="55"/>
+                                <rect key="frame" x="142" y="119" width="130" height="55"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                 <color key="textColor" red="0.33615422249999999" green="0.73313182590000003" blue="0.34809109570000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -139,19 +139,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="streakBar4" translatesAutoresizingMaskIntoConstraints="NO" id="PCv-HT-pvE">
-                                <rect key="frame" x="0.0" y="177" width="414" height="156"/>
+                                <rect key="frame" x="0.0" y="157" width="414" height="156"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="156" id="PMB-Tm-2h2"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="superFrog" translatesAutoresizingMaskIntoConstraints="NO" id="N6T-ZC-0zR">
-                                <rect key="frame" x="195" y="277" width="182" height="151"/>
+                                <rect key="frame" x="195" y="257" width="182" height="151"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="151" id="RTj-Zp-19o"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Fba-mM-XER">
-                                <rect key="frame" x="0.0" y="88" width="414" height="368"/>
+                                <rect key="frame" x="0.0" y="68" width="414" height="368"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LrH-vX-MhH">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
@@ -456,6 +456,7 @@
                                 <state key="normal" title="Button" image="Group 73 (2)"/>
                                 <connections>
                                     <action selector="clickNext:" destination="7v3-5M-HOB" eventType="touchUpInside" id="4An-Sy-ZPm"/>
+                                    <segue destination="zMm-Tv-fyF" kind="show" id="fwE-QM-rRe"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fitness" translatesAutoresizingMaskIntoConstraints="NO" id="ZKC-Mt-Yrb">
