--- a/Quaranteen Project/Base.lproj/Main.storyboard
+++ b/Quaranteen Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zMm-Tv-fyF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7v3-5M-HOB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -19,11 +19,11 @@
             <objects>
                 <viewController title="Home View Controller" id="v1x-xZ-Zez" customClass="ViewController" customModule="Quaranteen_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="d4D-EB-5VA">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t0M-4C-hUn" userLabel="challengeCard">
-                                <rect key="frame" x="52" y="362" width="310" height="338"/>
+                                <rect key="frame" x="52" y="382" width="310" height="372"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Challenge" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2e-N0-qSF" userLabel="cardTitle">
                                         <rect key="frame" x="19" y="53" width="188" height="48"/>
@@ -87,7 +87,7 @@
                                 <color key="backgroundColor" red="0.95425027610000002" green="0.59998601679999997" blue="0.2438066602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVM-1k-8Iw">
-                                <rect key="frame" x="0.0" y="746" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="800" width="414" height="44"/>
                                 <items>
                                     <barButtonItem image="homeIcon" style="plain" id="gqi-fF-BrV" userLabel="homeButton">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="agj-FU-OXy">
@@ -117,7 +117,7 @@
                                 </items>
                             </toolbar>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQb-iE-zKa">
-                                <rect key="frame" x="0.0" y="12" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Home" id="Bsn-ae-lo0">
                                         <barButtonItem key="leftBarButtonItem" image="Arrow 1" id="Lli-El-tm8">
@@ -130,7 +130,7 @@
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4 DAY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5As-zF-Xxw">
-                                <rect key="frame" x="142" y="119" width="130" height="55"/>
+                                <rect key="frame" x="142" y="139" width="130" height="55"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                 <color key="textColor" red="0.33615422249999999" green="0.73313182590000003" blue="0.34809109570000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -145,19 +145,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="streakBar4" translatesAutoresizingMaskIntoConstraints="NO" id="PCv-HT-pvE">
-                                <rect key="frame" x="0.0" y="157" width="414" height="156"/>
+                                <rect key="frame" x="0.0" y="177" width="414" height="156"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="156" id="PMB-Tm-2h2"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="superFrog" translatesAutoresizingMaskIntoConstraints="NO" id="N6T-ZC-0zR">
-                                <rect key="frame" x="195" y="257" width="182" height="151"/>
+                                <rect key="frame" x="195" y="277" width="182" height="151"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="151" id="RTj-Zp-19o"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Fba-mM-XER">
-                                <rect key="frame" x="0.0" y="68" width="414" height="50"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LrH-vX-MhH">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
@@ -346,7 +346,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="LOG-mB-LZR"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OZr-Ja-NUr">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -420,7 +420,7 @@
                                 <rect key="frame" x="58" y="382" width="127" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="Component 4"/>
-                                <state key="selected" image="Ellipse 14"/>
+                                <state key="selected" image="Group 148"/>
                                 <connections>
                                     <action selector="selectConnections:" destination="7v3-5M-HOB" eventType="touchUpInside" id="x1i-ZN-xJr"/>
                                 </connections>
@@ -429,7 +429,7 @@
                                 <rect key="frame" x="224" y="382" width="125" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="Component 5"/>
-                                <state key="selected" image="Ellipse 14"/>
+                                <state key="selected" image="Group 149"/>
                                 <connections>
                                     <action selector="selectArts:" destination="7v3-5M-HOB" eventType="touchUpInside" id="L36-Mq-rIY"/>
                                 </connections>
@@ -438,7 +438,7 @@
                                 <rect key="frame" x="58" y="581" width="127" height="124"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="Component 6"/>
-                                <state key="selected" image="Ellipse 14"/>
+                                <state key="selected" image="Group 150"/>
                                 <connections>
                                     <action selector="selectMentalHealth:" destination="7v3-5M-HOB" eventType="touchUpInside" id="EcU-LC-Wij"/>
                                 </connections>
@@ -447,7 +447,7 @@
                                 <rect key="frame" x="224" y="581" width="125" height="124"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="Component 7"/>
-                                <state key="selected" image="Ellipse 14"/>
+                                <state key="selected" image="Component 11"/>
                                 <connections>
                                     <action selector="selectProductivity:" destination="7v3-5M-HOB" eventType="touchUpInside" id="m6f-pj-rIG"/>
                                 </connections>
@@ -514,7 +514,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="zMm-Tv-fyF" kind="show" id="Kjb-AC-rdr"/>
+                                    <action selector="clickNext:" destination="7v3-5M-HOB" eventType="touchUpInside" id="q69-yk-MKk"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -538,6 +538,7 @@
     <resources>
         <image name="Arrow 1" width="24" height="16"/>
         <image name="Component 1 (1)" width="128" height="128"/>
+        <image name="Component 11" width="128" height="128"/>
         <image name="Component 2 (1)" width="128" height="128"/>
         <image name="Component 3" width="128" height="128"/>
         <image name="Component 4" width="128" height="128"/>
@@ -547,6 +548,9 @@
         <image name="Component 8" width="128" height="128"/>
         <image name="Ellipse 14" width="128" height="128"/>
         <image name="GROW" width="122" height="30"/>
+        <image name="Group 148" width="128" height="128"/>
+        <image name="Group 149" width="128" height="128"/>
+        <image name="Group 150" width="128" height="128"/>
         <image name="homeIcon" width="37" height="35"/>
         <image name="profileIcon" width="28" height="28"/>
         <image name="progressIcon" width="34" height="34"/>
